ADD. add deploy script
